<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseModeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/taxi_splash_screen_1920" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@color/taxi_yellow"
            android:gravity="center_horizontal"
            android:text="@string/taxi_luks"
            android:textColor="@color/taxi_black"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/passengerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/taxi_black"
            android:onClick="goToPassengerSignIn"
            android:text="@string/i_m_passenger"
            android:textColor="@color/taxi_orange"
            android:textSize="30sp" />

        <Button
            android:id="@+id/driverButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToDriverSignIn"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/taxi_orange"
            android:text="@string/i_m_driver"
            android:textColor="@color/taxi_black"
            android:textSize="30sp" />


    </LinearLayout>

</FrameLayout>